      * decreased the holy resistance of the Hurricane Drake from 20% to -30%
      * decreased the holy resistance of the Mermaid Priestess from 40% to 20%
      * decreased the holy resistance of the Mermaid Diviner from 60% to 40%
 * terrain system
   * added layer support to the terrain letters, two layers are supported
 * tutorial
   * increased number of trusn from 20 to 26 in the 2nd scenario
 * WML engine
   * new [own_village] condition to check if someone own a particular village
   * new [store_villages] tag to store village locations
   * all [store_*] tags get a default variable name
   * use complex variable substitution almost everywhere
   * new key for [set_variable], literal=, to avoid variable substitution
   * [effect] can now toggle the zoc
   * new key for [variable], boolean_equals=, to test boolean equality
   * remove some old backward compatibility support
   * set_name in attack modification [effect] no longer change the weapon's 
     description, use the new set_description instead
   * hit=yes in anim is now an alias of hit=hit,kill instead of hit=hit
     this should fix the sliding bug and fix more bugs than it creates
   * friendlier boolean matching for unit [filter] and unit [wml_filter]
 * user interface:
   * new sounds for user interface events
   * added the option to show warnings about deprecated WML usage
 * misceleanous changes and bug fixes
   * an friendly healer hill now stop poisoned unit to lose HP
   * a unit that dies while attacking will now correctly play it's own death
   * turn bell can sound if other soundFX are turned off
   * the first turn starts again with the proper time of day (bug 8637)
   * removes the scaling handling in the halo, removing quite some code

Version 1.3.1:
 * Campaignd
   * first argument is number of threads to use, defaults to 5
 * campaigns
   * Eastern Invasion:
     * Drowned Planes the dragon starts on grassland